Updated the accounts page to include how long an account will be active for.
